--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             </div>
             <div class="copyright">
 
-                © 1996-2024, Amazon.com, Inc. or its affiliates
+                © 1996-2024, Amazon.com, Inc. recreated by Mohammad Hafeez
             </div>
         </div>
     </footer>
